comment and detail